lcd屏幕初步调试完成

--- a/CM33/.vscode/settings.json
+++ b/CM33/.vscode/settings.json
@@ -50,7 +50,8 @@
         "arm_cmse.h": "c",
         "star_rcc.h": "c",
         "star_gpio.h": "c",
-        "ahb_ledseg.h": "c"
+        "ahb_ledseg.h": "c",
+        "ahb_lcd8080.h": "c"
     },
     "workbench.colorCustomizations": {
         "editor.lineHighlightBackground": "#1073cf2d",
